--- a/style.css
+++ b/style.css
@@ -179,7 +179,25 @@ section {
 
 .section__text p {
   font-weight: 600;
+  white-space: nowrap;
+   
 }
+.section__text__p2 {
+  white-space: nowrap;
+  border-right: 3px solid #0073e6;
+  overflow: hidden;
+  width: 0;
+  animation: typing 3s steps(30) forwards, blink 0.7s infinite step-end alternate;
+}
+@keyframes typing {
+  from { width: 0; }
+  to { width: 16ch; }
+}
+
+@keyframes blink {
+  50% { border-color: transparent; }
+}
+
 
 .section__text__p1 {
   text-align: center;
@@ -261,6 +279,8 @@ section {
 
 #about {
   position: relative;
+  border-radius: 8px;
+  box-shadow: 0 4px 8px rgba(175, 173, 173, 0.1);
 }
 
 .about-containers {
@@ -314,6 +334,7 @@ section {
 
 #experience {
   position: relative;
+  
 }
 
 .experience-sub-title {
@@ -353,6 +374,7 @@ article .icon {
 
 #projects {
   position: relative;
+  
 }
 
 .color-container {
