--- a/style.css
+++ b/style.css
@@ -40,6 +40,7 @@ nav {
   background-color: rgb(231, 231, 231);
   position: fixed;
   width: 100%;
+  z-index: 1000;
 }
 
 .nav-links {
@@ -436,7 +437,7 @@ article .icon {
 /* FOOTER SECTION */
 
 footer {
-  height: 10vh;
+  height: 26vh;
   margin: 0 1rem;
 }
 
