--- a/style.css
+++ b/style.css
@@ -647,6 +647,44 @@ footer p {
   background: rgb(173, 135, 135);
   
 }
+@media (max-width: 425px) {
+  .toggle-button {
+    width: 50px;
+    height: 50px;
+    font-size: 18px;
+  }
+
+  .chatbot-container {
+    width: 100%;
+    bottom: 20px;
+    right: 0;
+    left: 0;
+  }
+
+  .chat {
+    padding: 8px;
+    background-size: cover;
+  }
+
+  .message {
+    flex-direction: column;
+    text-align: center;
+  }
+
+  .input-container {
+    flex-direction: column;
+    padding: 5px;
+  }
+
+  .input {
+    margin-bottom: 5px;
+    font-size: 14px;
+  }
+
+  .button {
+    font-size: 16px;
+  }
+}
 @media (max-width: 600px) {
   .toggle-button {
     width: 50px;
@@ -655,7 +693,7 @@ footer p {
   }
 
   .chatbot-container {
-    width: 100%; /* Ensure it takes the full width of the screen */
+    width: 100%;
     bottom: 20px;
     right: 0;
     left: 0;
