--- a/mediaqueries.css
+++ b/mediaqueries.css
@@ -1,4 +1,4 @@
-@media screen and (max-width: 1400px) {
+   @media screen and (max-width: 1400px) {
   #profile {
     height: 83vh;
     margin-bottom: 6rem;
@@ -99,5 +99,9 @@
   }
   .text-container {
     text-align: justify;
+  }
+
+  footer {
+    height: inherit;
   }
 }
