--- a/style.css
+++ b/style.css
@@ -442,8 +442,8 @@ footer {
   text-align: center;
 }
 .top {
-  display: flex;            /* Use flexbox for layout */
-  justify-content: center;  /* Centers content horizontally */
+  display: flex; 
+  justify-content: center; 
   align-items: center; 
   color: rgb(71, 64, 64);
   border-radius: 5px;
